Bug 297156 - konsole crashes running 'ssh -t'
Summary: konsole crashes running 'ssh -t'
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.8.1
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
: 297877 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-03-31 00:03 UTC by Matthew Woehlke
Modified: 2012-04-20 06:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Woehlke 2012-03-31 00:03:37 UTC
Application: konsole (2.8.1)
KDE Platform Version: 4.8.1 (4.8.1)
Qt Version: 4.8.0
Operating System: Linux 3.3.0-1.fc17.x86_64 x86_64
Distribution (Platform): Fedora RPMs

-- Information about the crash:
- Steps to reproduce:
1. ssh -t localhost bash -l

Running the above crashes konsole every time about a second after logging in.

- Custom settings of the application:
Remote tab title format is set to "(%u) %h".

- Additional information:
Changing the remote tab title format to a string without placeholders avoids the bug.

-- Backtrace:
Application: Konsole (konsole), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[KCrash Handler]
#5  0x00000030b94c5107 in QString::operator=(QString const&) () from /lib64/libQtCore.so.4
#6  0x00000030bc47498b in Konsole::SSHProcessInfo::SSHProcessInfo (this=0x7fffebdf6d10, process=...) at /usr/src/debug/konsole-4.8.1/src/ProcessInfo.cpp:1043
#7  0x00000030bc4847cd in Konsole::Session::getDynamicTitle (this=0x24f6780) at /usr/src/debug/konsole-4.8.1/src/Session.cpp:1005
#8  0x00000030bc48dd77 in Konsole::SessionController::snapshot (this=0x25ba6f0) at /usr/src/debug/konsole-4.8.1/src/SessionController.cpp:204
#9  0x00000030bc491d0a in qt_static_metacall (_a=<optimized out>, _id=<optimized out>, _o=<optimized out>, _c=<optimized out>) at /usr/src/debug/konsole-4.8.1/x86_64-redhat-linux-gnu/src/SessionController.moc:164
#10 Konsole::SessionController::qt_static_metacall (_o=<optimized out>, _c=<optimized out>, _id=<optimized out>, _a=<optimized out>) at /usr/src/debug/konsole-4.8.1/x86_64-redhat-linux-gnu/src/SessionController.moc:121
#11 0x00000030b9589c0f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /lib64/libQtCore.so.4
#12 0x00000030b9588f1c in QObject::event(QEvent*) () from /lib64/libQtCore.so.4
#13 0x00000030bd1ca2dc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQtGui.so.4
#14 0x00000030bd1ce85a in QApplication::notify(QObject*, QEvent*) () from /lib64/libQtGui.so.4
#15 0x00000030be445806 in KApplication::notify(QObject*, QEvent*) () from /lib64/libkdeui.so.5
#16 0x00000030b957482e in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /lib64/libQtCore.so.4
#17 0x00000030b95a5122 in ?? () from /lib64/libQtCore.so.4
#18 0x00000030b95a22f4 in ?? () from /lib64/libQtCore.so.4
#19 0x00000030b044773c in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#20 0x00000030b0447b58 in ?? () from /lib64/libglib-2.0.so.0
#21 0x00000030b0447c14 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#22 0x00000030b95a2956 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#23 0x00000030bd269c0e in ?? () from /lib64/libQtGui.so.4
#24 0x00000030b957382f in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#25 0x00000030b9573ab8 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQtCore.so.4
#26 0x00000030b95782fc in QCoreApplication::exec() () from /lib64/libQtCore.so.4
#27 0x00000030b7c133d5 in kdemain (argc=1, argv=0x7fffebdf7a68) at /usr/src/debug/konsole-4.8.1/src/main.cpp:89
#28 0x00000030ae421735 in __libc_start_main () from /lib64/libc.so.6
#29 0x0000000000400811 in _start ()

Reported using DrKonqi
Comment 1 Kurt Hindenburg 2012-03-31 01:06:05 UTC
well that is impressive...  confirmed

(gdb) bt
#0  0xb71f45b2 in QString::operator=(QString const&) ()
   from /usr/lib/qt4/libQtCore.so.4
#1  0xb7f58414 in Konsole::SSHProcessInfo::SSHProcessInfo (this=0xbfffea4c, 
    process=...)
    at /mnt/extrahd/KDE/src/kde/kde-baseapps/konsole/src/ProcessInfo.cpp:941
#2  0xb7f69dc5 in Konsole::Session::getDynamicTitle (this=0x80a3100)
    at /mnt/extrahd/KDE/src/kde/kde-baseapps/konsole/src/Session.cpp:950
#3  0xb7f745b9 in Konsole::SessionController::snapshot (this=0x8205da8)
    at /mnt/extrahd/KDE/src/kde/kde-baseapps/konsole/src/SessionController.cpp:230
#4  0xb7f79e0d in Konsole::SessionController::qt_static_metacall (
    _o=0x8205da8, _c=QMetaObject::InvokeMetaMethod, _id=40, _a=0xbfffebcc)
    at /mnt/extrahd/KDE/build/kde/kde-baseapps/konsole/src/SessionController.moc:173
#5  0xb72c9252 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/qt4/libQtCore.so.4
#6  0xb731b0f7 in QTimer::timeout() () from /usr/lib/qt4/libQtCore.so.4
#7  0xb72d16de in QTimer::timerEvent(QTimerEvent*) ()
   from /usr/lib/qt4/libQtCore.so.4
#8  0xb72c85c4 in QObject::event(QEvent*) () from /usr/lib/qt4/libQtCore.so.4
#9  0xb673ada4 in QApplicationPrivate::notify_helper(QObject*, QEvent*) ()
   from /usr/lib/qt4/libQtGui.so.4
#10 0xb673fade in QApplication::notify(QObject*, QEvent*) ()
   from /usr/lib/qt4/libQtGui.so.4
#11 0xb7a3503a in KApplication::notify(QObject*, QEvent*) ()
   from /usr/lib/libkdeui.so.5
#12 0xb72b273b in QCoreApplication::notifyInternal(QObject*, QEvent*) ()
   from /usr/lib/qt4/libQtCore.so.4
#13 0xb72e6d21 in ?? () from /usr/lib/qt4/libQtCore.so.4
#14 0xb72e3a3a in ?? () from /usr/lib/qt4/libQtCore.so.4
#15 0xb5dd1d42 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#16 0xb5dd2508 in ?? () from /usr/lib/libglib-2.0.so.0
#17 0xb5dd2724 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#18 0xb72e41dc in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/qt4/libQtCore.so.4
#19 0xb67ed065 in ?? () from /usr/lib/qt4/libQtGui.so.4
#20 0xb72b1549 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag---Type <return> to continue, or q <return> to quit---
>) () from /usr/lib/qt4/libQtCore.so.4
#21 0xb72b185a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) ()
   from /usr/lib/qt4/libQtCore.so.4
#22 0xb72b651f in QCoreApplication::exec() () from /usr/lib/qt4/libQtCore.so.4
#23 0xb6738c17 in QApplication::exec() () from /usr/lib/qt4/libQtGui.so.4
#24 0xb7fd6904 in kdemain (argc=2, argv=0xbffff584)
    at /mnt/extrahd/KDE/src/kde/kde-baseapps/konsole/src/main.cpp:84
#25 0x0804878b in main (argc=2, argv=0xbffff584)
    at /mnt/extrahd/KDE/build/kde/kde-baseapps/konsole/src/konsole_dummy.cpp:3
Comment 2 Kurt Hindenburg 2012-03-31 01:23:17 UTC
Git commit f28b60ba092e2c0f61c1abf993b7f364e80f35b6 by Kurt Hindenburg.
Committed on 31/03/2012 at 03:21.
Pushed by hindenburg into branch 'master'.

Fix crash for  'ssh -t localhost bash -l'

This needs to be handled better but for now stop crashing.

M  +4    -1    src/ProcessInfo.cpp

http://commits.kde.org/konsole/f28b60ba092e2c0f61c1abf993b7f364e80f35b6
Comment 3 Kurt Hindenburg 2012-03-31 01:36:02 UTC
Git commit 6cda78850fdbf7e155b73fe55fd5dfcfb8a3ff9d by Kurt Hindenburg.
Committed on 31/03/2012 at 03:35.
Pushed by hindenburg into branch 'KDE/4.8'.

Fix crash for  'ssh -t localhost bash -l'

This needs to be handled better but for now stop crashing.

M  +4    -1    src/ProcessInfo.cpp

http://commits.kde.org/konsole/6cda78850fdbf7e155b73fe55fd5dfcfb8a3ff9d
Comment 4 Matthew Woehlke 2012-04-10 18:38:36 UTC
Confirmed no longer crashing in konsole-part-4.8.2-4.fc17.x86_64... thanks.
Comment 5 Jekyll Wu 2012-04-20 06:51:53 UTC
*** Bug 297877 has been marked as a duplicate of this bug. ***