Fix crash for  'ssh -t localhost bash -l'

This needs to be handled better but for now stop crashing.

BUG: 297156